--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <span class="wordDes">Founder of “XXXD Official’’ & Graphic Designer</span>
                 <div class="imgs">
                     <img src="./img/behance.svg" alt="">
-                    <img src="/img/facebook.svg" alt="">
-                    <img src="/img/instagram.svg" alt="">
-                    <img src="/img/youtube.svg" alt="">
+                    <img src="./img/facebook.svg" alt="">
+                    <img src="./img/instagram.svg" alt="">
+                    <img src="./img/youtube.svg" alt="">
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
     <div class="content">
         <div class="about">
             <p class="title">About</p>
-            <img src="/img/photo.png" alt="">
+            <img src="./img/photo.png" alt="">
             <div class="aboutDesc">
                 <p class="item">Joanne Chen</p>
                 <p class="item">1997/10/10</p>
@@ -48,10 +48,10 @@
         <ul class="fullDesc">
             <li class="item">2020 年創立的個人服飾品牌 引領叛逆少年開啟與社會對話的窗口 主打概念潮流T-Shirt</li>
         </ul>
-        <img src="/img/brand_img1.png" alt="" class="item1" id="img-1">
+        <img src="./img/brand_img1.png" alt="" class="item1" id="img-1">
         <div class="imgArea">
-            <img src="/img/brand_img2.png" alt="" class="item2">
-            <img src="/img/brand_img3.png" alt="" class="item3">
+            <img src="./img/brand_img2.png" alt="" class="item2">
+            <img src="./img/brand_img3.png" alt="" class="item3">
         </div>
     </div>
     <div class="content">
@@ -63,13 +63,13 @@
             <li class="item">
                 <img src="/img/work_img1.png" alt="">
                 <span>海報設計/2017</span></li>
-            <li class="item"><img src="/img/work_img2.png" alt=""><span>海報設計/2018</span></li>
-            <li class="item"><img src="/img/work_img3.png" alt=""><span>海報設計/2018</span></li>
-            <li class="item"><img src="/img/work_img4.png" alt=""><span>概念攝影/2018</span></li>
-            <li class="item"><img src="/img/work_img5.png" alt=""><span>概念攝影/2018</span></li>
-            <li class="item"><img src="/img/work_img6.png" alt=""><span>sasa 酒標設計/2019</span></li>
-            <li class="item"><img src="/img/work_img7.png" alt=""><span>攝影創作/2018</span></li>
-            <li class="item"><img src="/img/work_img8.png" alt=""><span>官網設計/2020</span></li>
+            <li class="item"><img src="./img/work_img2.png" alt=""><span>海報設計/2018</span></li>
+            <li class="item"><img src="./img/work_img3.png" alt=""><span>海報設計/2018</span></li>
+            <li class="item"><img src="./img/work_img4.png" alt=""><span>概念攝影/2018</span></li>
+            <li class="item"><img src="./img/work_img5.png" alt=""><span>概念攝影/2018</span></li>
+            <li class="item"><img src="./img/work_img6.png" alt=""><span>sasa 酒標設計/2019</span></li>
+            <li class="item"><img src="./img/work_img7.png" alt=""><span>攝影創作/2018</span></li>
+            <li class="item"><img src="./img/work_img8.png" alt=""><span>官網設計/2020</span></li>
         </ul>
 
     </div>
