--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <div class="hereDec">
                 <span class="wordDes">Founder of “XXXD Official’’ & Graphic Designer</span>
                 <div class="imgs">
-                    <img src="./img/behance.svg" alt="">
-                    <img src="./img/facebook.svg" alt="">
-                    <img src="./img/instagram.svg" alt="">
-                    <img src="./img/youtube.svg" alt="">
+                    <img src="./img/behance.svg" alt="behance">
+                    <img src="./img/facebook.svg" alt="facebook">
+                    <img src="./img/instagram.svg" alt="instagram">
+                    <img src="./img/youtube.svg" alt="youtube">
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
     <div class="content">
         <div class="about">
             <p class="title">About</p>
-            <img src="./img/photo.png" alt="">
+            <img src="./img/photo.png" alt="photo">
             <div class="aboutDesc">
                 <p class="item">Joanne Chen</p>
                 <p class="item">1997/10/10</p>
@@ -48,10 +48,10 @@
         <ul class="fullDesc">
             <li class="item">2020 年創立的個人服飾品牌 引領叛逆少年開啟與社會對話的窗口 主打概念潮流T-Shirt</li>
         </ul>
-        <img src="./img/brand_img1.png" alt="" class="item1" id="img-1">
+        <img src="./img/brand_img1.png" alt="brand_img1" class="item1" id="img-1">
         <div class="imgArea">
-            <img src="./img/brand_img2.png" alt="" class="item2">
-            <img src="./img/brand_img3.png" alt="" class="item3">
+            <img src="./img/brand_img2.png" alt="brand_img2" class="item2">
+            <img src="./img/brand_img3.png" alt="brand_img3" class="item3">
         </div>
     </div>
     <div class="content">
@@ -61,15 +61,15 @@
         </div>
         <ul class="imgs">
             <li class="item">
-                <img src="/img/work_img1.png" alt="">
+                <img src="/img/work_img1.png" alt="work_img1">
                 <span>海報設計/2017</span></li>
-            <li class="item"><img src="./img/work_img2.png" alt=""><span>海報設計/2018</span></li>
-            <li class="item"><img src="./img/work_img3.png" alt=""><span>海報設計/2018</span></li>
-            <li class="item"><img src="./img/work_img4.png" alt=""><span>概念攝影/2018</span></li>
-            <li class="item"><img src="./img/work_img5.png" alt=""><span>概念攝影/2018</span></li>
-            <li class="item"><img src="./img/work_img6.png" alt=""><span>sasa 酒標設計/2019</span></li>
-            <li class="item"><img src="./img/work_img7.png" alt=""><span>攝影創作/2018</span></li>
-            <li class="item"><img src="./img/work_img8.png" alt=""><span>官網設計/2020</span></li>
+            <li class="item"><img src="./img/work_img2.png" alt="work_img2"><span>海報設計/2018</span></li>
+            <li class="item"><img src="./img/work_img3.png" alt="work_img3"><span>海報設計/2018</span></li>
+            <li class="item"><img src="./img/work_img4.png" alt="work_img4"><span>概念攝影/2018</span></li>
+            <li class="item"><img src="./img/work_img5.png" alt="work_img5"><span>概念攝影/2018</span></li>
+            <li class="item"><img src="./img/work_img6.png" alt="work_img6"><span>sasa 酒標設計/2019</span></li>
+            <li class="item"><img src="./img/work_img7.png" alt="work_img7"><span>攝影創作/2018</span></li>
+            <li class="item"><img src="./img/work_img8.png" alt="work_img8"><span>官網設計/2020</span></li>
         </ul>
 
     </div>
