--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <ul class="imgs">
             <li class="item">
-                <img src="/img/work_img1.png" alt="work_img1">
+                <img src="./img/work_img1.png" alt="work_img1">
                 <span>海報設計/2017</span></li>
             <li class="item"><img src="./img/work_img2.png" alt="work_img2"><span>海報設計/2018</span></li>
             <li class="item"><img src="./img/work_img3.png" alt="work_img3"><span>海報設計/2018</span></li>
