[insert] add AOS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="banner">
         <div class="containerFull-1">
-            <span id="word">Here’s</span>
+            <span id="word" >Here’s</span>
             <h1 class="name">JOANNE</h1>
             <div class="hereDec">
                 <span class="wordDes">Founder of “XXXD Official’’ & Graphic Designer</span>
@@ -26,14 +26,14 @@
     </div>
     <div class="content">
         <div class="about">
-            <p class="title">About</p>
+            <p class="title" data-aos="fade-up">About</p>
             <img src="./img/photo.png" alt="photo">
-            <div class="aboutDesc">
+            <div class="aboutDesc" data-aos="fade-up">
                 <p class="item">Joanne Chen</p>
                 <p class="item">1997/10/10</p>
                 <p class="item">National Hex School Normal University Department of Visual Design</p>
             </div>
-            <div class="aboutItem">
+            <div class="aboutItem" data-aos="fade-up">
                 <div class="items">
                     <p class="dot">Founder of ‘’XXXD Official’’</p>
                     <p class="dot">Graphic Designer</p>
@@ -42,14 +42,14 @@
             </div>
         </div>
     </div>
-    <div class="containerFull-2">
+    <div class="containerFull-2" >
         <p class="title">My Brand ‘’XXXD’’</p>
         <span>Just Keep XXXD Everyday</span>
         <ul class="fullDesc">
             <li class="item">2020 年創立的個人服飾品牌 引領叛逆少年開啟與社會對話的窗口 主打概念潮流T-Shirt</li>
         </ul>
-        <img src="./img/brand_img1.png" alt="brand_img1" class="item1" id="img-1">
-        <div class="imgArea">
+        <img src="./img/brand_img1.png" alt="brand_img1" class="item1" id="img-1" data-aos="fade-up-right">
+        <div class="imgArea" data-aos="fade-up-right">
             <img src="./img/brand_img2.png" alt="brand_img2" class="item2">
             <img src="./img/brand_img3.png" alt="brand_img3" class="item3">
         </div>
@@ -60,16 +60,16 @@
             <span>2016-2020 年累積的作品 海報/廣告/攝影/LOGO/3D</span>
         </div>
         <ul class="imgs">
-            <li class="item">
+            <li class="item" data-aos="flip-left">
                 <img src="./img/work_img1.png" alt="work_img1">
                 <span>海報設計/2017</span></li>
-            <li class="item"><img src="./img/work_img2.png" alt="work_img2"><span>海報設計/2018</span></li>
-            <li class="item"><img src="./img/work_img3.png" alt="work_img3"><span>海報設計/2018</span></li>
-            <li class="item"><img src="./img/work_img4.png" alt="work_img4"><span>概念攝影/2018</span></li>
-            <li class="item"><img src="./img/work_img5.png" alt="work_img5"><span>概念攝影/2018</span></li>
-            <li class="item"><img src="./img/work_img6.png" alt="work_img6"><span>sasa 酒標設計/2019</span></li>
-            <li class="item"><img src="./img/work_img7.png" alt="work_img7"><span>攝影創作/2018</span></li>
-            <li class="item"><img src="./img/work_img8.png" alt="work_img8"><span>官網設計/2020</span></li>
+            <li class="item"><img src="./img/work_img2.png" alt="work_img2" data-aos="flip-left"><span>海報設計/2018</span></li>
+            <li class="item"><img src="./img/work_img3.png" alt="work_img3" data-aos="flip-left"><span>海報設計/2018</span></li>
+            <li class="item"><img src="./img/work_img4.png" alt="work_img4" data-aos="flip-left"><span>概念攝影/2018</span></li>
+            <li class="item"><img src="./img/work_img5.png" alt="work_img5" data-aos="flip-left"><span>概念攝影/2018</span></li>
+            <li class="item"><img src="./img/work_img6.png" alt="work_img6" data-aos="flip-left"><span>sasa 酒標設計/2019</span></li>
+            <li class="item"><img src="./img/work_img7.png" alt="work_img7" data-aos="flip-left"><span>攝影創作/2018</span></li>
+            <li class="item"><img src="./img/work_img8.png" alt="work_img8" data-aos="flip-left"><span>官網設計/2020</span></li>
         </ul>
 
     </div>
@@ -80,6 +80,11 @@
             <li class="item">Phone Number：0910123456</li>
         </ul>
     </div>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+     AOS.init();
+    </script>
 </body>
 
 </html>
